fixed sidebar overflow

--- a/css/main.css
+++ b/css/main.css
@@ -4,23 +4,23 @@ body {
 }
 
 .container {
-	width: 100%
+	width: 100%;
 }
 #map {
   position:absolute;
-  width:60%;
-  height:100%;
+  width:60vw;
+  height:100vh;
 }
 .page-content {
-	width: 60%;
+	width: 60vw;
 	right: 0;
 }
 article.page-content {
-	width: 100%;
+	width: 100vw;
 }
 .sidebar {
-	height:100%;
-	width:40%;
+	height:100vh;
+	width:40vw;
 	background-color:#fff;
 	position:fixed!important;
 	z-index:1;
@@ -85,13 +85,9 @@ height: 200px;
 }
 
 article.post-article {
-height: 75vh;
+max-height: 70vh;
 overflow-y: scroll;
 z-index: 1 !important;
-padding-bottom: 10px;
-padding-top: 15px;
-padding-right: 15px;
-margin-right: -15px;
 font-size: 16px;
 
 }
@@ -134,7 +130,7 @@ li {
         overflow-x: hidden
     }
 	article.post-article {
-	height: 32vh;
+	max-height: 30vh;
 	}
 	div.wrapper {
 		width: 100vw;
